# PrynAI-MCP

./: .gitignore  LICENSE  README.md  README1.md  commit-msg.txt  docker-compose.yml  pyproject.toml
certs/: 127.0.0.1+1-key.pem  127.0.0.1+1.pem  dev.crt  dev.key
docs/: custom-domain-aca.md  phase0.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md
examples/: Generatetoken.py  certtoggles.ps1  checkconnection.py  phase5_langchain_create_agent_alltools_smoke.py  phase5_langgraph_smoke.py  smoke_http.py  smoke_http_phase1.py  smoke_oauth_cc.py  smoke_oauth_ccACADeployment.py  use_core_langchain_agent.py  use_core_list_tools.py
infra/azure/: deploy_aca.ps1  deploy_update.ps1  manualpromote.ps1
infra/docker/: Dockerfile
src/prynai/: mcp_core.py
src/prynai_mcp/: app.py  config.py  redis_client.py  server.py
src/prynai_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/prynai_mcp/auth/: azure_oauth.py  middleware.py
