[project]
name = "prynai-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "langchain>=1.0.0a9",
  "langchain-core>=0.2",
  "langchain-openai>=0.1.22",
  "langgraph>=0.2",
  "langsmith>=0.1.98",
  "mcp[cli]>=1.9", # official SDK with FastMCP + Streamable HTTP
  "msal>=1.28",
  "openai>=1.43",
  "pydantic-settings>=2.3",
  "pyjwt[crypto]>=2.8",
  "redis>=5.0.4",
  "starlette>=0.37",
  "uvicorn>=0.30",
]

[project.scripts]
prynai-mcp = "prynai_mcp.server:main"
